--- a/TUBITAK4006SAL.qrc
+++ b/TUBITAK4006SAL.qrc
@@ -4,5 +4,6 @@
     </qresource>
     <qresource prefix="/arkaplan">
         <file>resimler/Arkaplan.PNG</file>
+        <file>resimler/arkaplan.jpg</file>
     </qresource>
 </RCC>
