--- a/TUBITAK4006SAL.qrc
+++ b/TUBITAK4006SAL.qrc
@@ -6,4 +6,7 @@
         <file>resimler/Arkaplan.PNG</file>
         <file>resimler/arkaplan.jpg</file>
     </qresource>
+    <qresource prefix="/ICONS">
+        <file>resimler/back.ico</file>
+    </qresource>
 </RCC>
