--- a/girisEkrani.ui
+++ b/girisEkrani.ui
@@ -31,6 +31,10 @@
   <property name="windowTitle">
    <string>TÜBİTAK 4006 ŞAL</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="TUBITAK4006SAL.qrc">
+    <normaloff>:/ICONS/resimler/sal-logo.ico</normaloff>:/ICONS/resimler/sal-logo.ico</iconset>
+  </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(255, 255, 255);</string>
   </property>
@@ -66,6 +70,8 @@
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <resources>
+  <include location="TUBITAK4006SAL.qrc"/>
+ </resources>
  <connections/>
 </ui>
