--- a/picture-screen.ui
+++ b/picture-screen.ui
@@ -31,6 +31,10 @@
   <property name="windowTitle">
    <string>TÜBİTAK 4006 ŞAL</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="TUBITAK4006SAL.qrc">
+    <normaloff>:/ICONS/resimler/sal-logo.ico</normaloff>:/ICONS/resimler/sal-logo.ico</iconset>
+  </property>
   <property name="styleSheet">
    <string notr="true">#pic_screen {
 background-color: rgb(0, 0, 0);
