--- a/TUBITAK4006SAL.qrc
+++ b/TUBITAK4006SAL.qrc
@@ -7,10 +7,10 @@
         <file>resimler/arkaplan.jpg</file>
     </qresource>
     <qresource prefix="/ICONS">
-        <file>resimler/back.ico</file>
-        <file>resimler/power.ico</file>
-        <file>resimler/sal-logo.ico</file>
-        <file>resimler/magnifying-glass.ico</file>
-        <file>resimler/tubitak.ico</file>
+        <file>resimler/power.png</file>
+        <file>resimler/sal-logo.png</file>
+        <file>resimler/tubitak.png</file>
+        <file>resimler/back.png</file>
+        <file>resimler/magnifying-glass.png</file>
     </qresource>
 </RCC>
