--- a/okul.ui
+++ b/okul.ui
@@ -6,34 +6,22 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>350</height>
+    <width>370</width>
+    <height>495</height>
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
-  </property>
-  <property name="minimumSize">
-   <size>
-    <width>400</width>
-    <height>350</height>
-   </size>
-  </property>
-  <property name="maximumSize">
-   <size>
-    <width>400</width>
-    <height>350</height>
-   </size>
   </property>
   <property name="windowTitle">
    <string>TÜBİTAK 4006 ŞAL</string>
   </property>
   <property name="windowIcon">
    <iconset resource="TUBITAK4006SAL.qrc">
-    <normaloff>:/ICONS/resimler/sal-logo.ico</normaloff>:/ICONS/resimler/sal-logo.ico</iconset>
+    <normaloff>:/ICONS/resimler/sal-logo.png</normaloff>:/ICONS/resimler/sal-logo.png</iconset>
   </property>
   <property name="styleSheet">
    <string notr="true">#okul  {
@@ -41,7 +29,7 @@ border-image: url(:/arkaplan/resimler/arkaplan.jpg);
 }</string>
   </property>
   <widget class="QWidget" name="layoutWidget">
-   <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,90,0,0">
+   <layout class="QVBoxLayout" name="verticalLayout" stretch="7,0,90,0,10">
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="10,80,10">
       <item>
@@ -59,11 +47,27 @@ border-image: url(:/arkaplan/resimler/arkaplan.jpg);
       </item>
       <item>
        <widget class="QLabel" name="okulAdi">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="font">
+         <font>
+          <family>MS Shell Dlg 2</family>
+          <pointsize>8</pointsize>
+          <weight>9</weight>
+          <italic>false</italic>
+          <bold>false</bold>
+         </font>
+        </property>
         <property name="layoutDirection">
          <enum>Qt::LeftToRight</enum>
         </property>
         <property name="styleSheet">
          <string notr="true">font: 75 12pt &quot;MS Shell Dlg 2&quot;;
+font: 75 8pt &quot;MS Shell Dlg 2&quot;;
 background-color: rgb(255, 255, 255);</string>
         </property>
         <property name="text">
@@ -131,7 +135,9 @@ p, li { white-space: pre-wrap; }
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;    Furkan Bağ&lt;/p&gt;
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Bu uygulama &lt;span style=&quot; color:#00ff00;&quot;&gt;Qt Framework&lt;/span&gt;  kullanılarak yapılmıştır...&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Bu uygulama &lt;span style=&quot; color:#00ff00;&quot;&gt;Qt Framework&lt;/span&gt;  kullanılarak yapılmıştır...&lt;/p&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;a href=&quot;https://github.com/Samet732/TUBITAK-4006-SAL&quot;&gt;&lt;span style=&quot; font-size:8pt; text-decoration: underline; color:#0000ff;&quot;&gt;Kaynak Kodu Gör...&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
        </widget>
       </item>
@@ -173,12 +179,6 @@ p, li { white-space: pre-wrap; }
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
-        <property name="maximumSize">
-         <size>
-          <width>200</width>
-          <height>100</height>
-         </size>
-        </property>
         <property name="styleSheet">
          <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:0, stop:1 rgba(178, 178, 178, 255));
 font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
@@ -191,16 +191,10 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
       <item>
        <widget class="QPushButton" name="okulButton">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>200</width>
-          <height>100</height>
-         </size>
         </property>
         <property name="styleSheet">
          <string notr="true">background-color: qlineargradient(spread:pad, x1:0.607955, y1:0.29, x2:0.466, y2:0.0745909, stop:0.5625 rgba(48, 192, 125, 255), stop:1 rgba(255, 255, 255, 255));
