--- a/picture-screen.ui
+++ b/picture-screen.ui
@@ -6,26 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>350</height>
+    <width>370</width>
+    <height>495</height>
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
   <property name="minimumSize">
    <size>
-    <width>400</width>
-    <height>350</height>
-   </size>
-  </property>
-  <property name="maximumSize">
-   <size>
-    <width>400</width>
-    <height>350</height>
+    <width>0</width>
+    <height>0</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -33,7 +27,7 @@
   </property>
   <property name="windowIcon">
    <iconset resource="TUBITAK4006SAL.qrc">
-    <normaloff>:/ICONS/resimler/sal-logo.ico</normaloff>:/ICONS/resimler/sal-logo.ico</iconset>
+    <normaloff>:/ICONS/resimler/sal-logo.png</normaloff>:/ICONS/resimler/sal-logo.png</iconset>
   </property>
   <property name="styleSheet">
    <string notr="true">#pic_screen {
@@ -71,7 +65,7 @@ color: rgb(255, 255, 255);</string>
   <action name="back">
    <property name="icon">
     <iconset resource="TUBITAK4006SAL.qrc">
-     <normaloff>:/ICONS/resimler/back.ico</normaloff>:/ICONS/resimler/back.ico</iconset>
+     <normaloff>:/ICONS/resimler/back.png</normaloff>:/ICONS/resimler/back.png</iconset>
    </property>
    <property name="text">
     <string>Geri</string>
