--- a/projeEkran1.ui
+++ b/projeEkran1.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>360</height>
+    <width>370</width>
+    <height>495</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -18,14 +18,8 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>400</width>
-    <height>350</height>
-   </size>
-  </property>
-  <property name="maximumSize">
-   <size>
-    <width>400</width>
-    <height>360</height>
+    <width>0</width>
+    <height>0</height>
    </size>
   </property>
   <property name="baseSize">
@@ -34,12 +28,19 @@
     <height>0</height>
    </size>
   </property>
+  <property name="font">
+   <font>
+    <pointsize>8</pointsize>
+    <weight>50</weight>
+    <bold>false</bold>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>TÜBİTAK 4006 ŞAL</string>
   </property>
   <property name="windowIcon">
    <iconset resource="TUBITAK4006SAL.qrc">
-    <normaloff>:/ICONS/resimler/sal-logo.ico</normaloff>:/ICONS/resimler/sal-logo.ico</iconset>
+    <normaloff>:/ICONS/resimler/sal-logo.png</normaloff>:/ICONS/resimler/sal-logo.png</iconset>
   </property>
   <property name="styleSheet">
    <string notr="true">#projeEkran1 {
@@ -49,7 +50,7 @@ border-image: url(:/arkaplan/resimler/arkaplan.jpg);
   <widget class="QWidget" name="projeEkran1_2">
    <layout class="QVBoxLayout" name="verticalLayout_2">
     <item>
-     <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,90,0,0">
+     <layout class="QVBoxLayout" name="verticalLayout" stretch="7,0,90,0,10">
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="10,80,10">
         <item>
@@ -67,12 +68,21 @@ border-image: url(:/arkaplan/resimler/arkaplan.jpg);
         </item>
         <item>
          <widget class="QLabel" name="baslikLabel">
+          <property name="font">
+           <font>
+            <family>MS Shell Dlg 2</family>
+            <pointsize>12</pointsize>
+            <weight>9</weight>
+            <italic>false</italic>
+            <bold>false</bold>
+           </font>
+          </property>
           <property name="layoutDirection">
            <enum>Qt::LeftToRight</enum>
           </property>
           <property name="styleSheet">
-           <string notr="true">font: 75 12pt &quot;MS Shell Dlg 2&quot;;
-background-color: rgb(255, 255, 255);</string>
+           <string notr="true">background-color: rgb(255, 255, 255);
+font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
           </property>
           <property name="text">
            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;Yukarıdan proje seçin...&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -162,20 +172,14 @@ p, li { white-space: pre-wrap; }
        </spacer>
       </item>
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout">
+       <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,1">
         <item>
          <widget class="QPushButton" name="projelerButton1">
           <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
-          </property>
-          <property name="maximumSize">
-           <size>
-            <width>200</width>
-            <height>100</height>
-           </size>
           </property>
           <property name="styleSheet">
            <string notr="true">background-color: qlineargradient(spread:pad, x1:0.607955, y1:0.29, x2:0.466, y2:0.0745909, stop:0.5625 rgba(48, 192, 125, 255), stop:1 rgba(255, 255, 255, 255));
@@ -193,12 +197,6 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
-          </property>
-          <property name="maximumSize">
-           <size>
-            <width>200</width>
-            <height>100</height>
-           </size>
           </property>
           <property name="styleSheet">
            <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:0, stop:1 rgba(178, 178, 178, 255));
@@ -220,7 +218,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>400</width>
+     <width>370</width>
      <height>21</height>
     </rect>
    </property>
@@ -337,7 +335,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   <action name="bar_proje1">
    <property name="icon">
     <iconset resource="TUBITAK4006SAL.qrc">
-     <normaloff>:/ICONS/resimler/tubitak.ico</normaloff>:/ICONS/resimler/tubitak.ico</iconset>
+     <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
     <string>Şişli'nin Dünü ve Bugünü</string>
@@ -346,7 +344,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   <action name="bar_proje8">
    <property name="icon">
     <iconset resource="TUBITAK4006SAL.qrc">
-     <normaloff>:/ICONS/resimler/tubitak.ico</normaloff>:/ICONS/resimler/tubitak.ico</iconset>
+     <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
     <string>Nil Deltasında Solmuş Bir Çiçek</string>
@@ -355,7 +353,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   <action name="bar_proje2">
    <property name="icon">
     <iconset resource="TUBITAK4006SAL.qrc">
-     <normaloff>:/ICONS/resimler/tubitak.ico</normaloff>:/ICONS/resimler/tubitak.ico</iconset>
+     <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
     <string>Arıtılan Bakteri</string>
@@ -364,7 +362,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   <action name="bar_proje3">
    <property name="icon">
     <iconset resource="TUBITAK4006SAL.qrc">
-     <normaloff>:/ICONS/resimler/tubitak.ico</normaloff>:/ICONS/resimler/tubitak.ico</iconset>
+     <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
     <string>İdeal Su</string>
@@ -373,7 +371,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   <action name="bar_proje4">
    <property name="icon">
     <iconset resource="TUBITAK4006SAL.qrc">
-     <normaloff>:/ICONS/resimler/tubitak.ico</normaloff>:/ICONS/resimler/tubitak.ico</iconset>
+     <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
     <string>Ses Frekansının Filizlenmeye Etkisi</string>
@@ -382,7 +380,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   <action name="bar_proje9">
    <property name="icon">
     <iconset resource="TUBITAK4006SAL.qrc">
-     <normaloff>:/ICONS/resimler/tubitak.ico</normaloff>:/ICONS/resimler/tubitak.ico</iconset>
+     <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
     <string>Hem Bakımlı Hem Sağlıklı Ol</string>
@@ -391,7 +389,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   <action name="bar_proje5">
    <property name="icon">
     <iconset resource="TUBITAK4006SAL.qrc">
-     <normaloff>:/ICONS/resimler/tubitak.ico</normaloff>:/ICONS/resimler/tubitak.ico</iconset>
+     <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
     <string>Görmeden Kalkan Engeller</string>
@@ -400,7 +398,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   <action name="bar_proje7">
    <property name="icon">
     <iconset resource="TUBITAK4006SAL.qrc">
-     <normaloff>:/ICONS/resimler/tubitak.ico</normaloff>:/ICONS/resimler/tubitak.ico</iconset>
+     <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
     <string>Yürüyen Kristaller</string>
@@ -409,7 +407,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   <action name="bar_proje10">
    <property name="icon">
     <iconset resource="TUBITAK4006SAL.qrc">
-     <normaloff>:/ICONS/resimler/tubitak.ico</normaloff>:/ICONS/resimler/tubitak.ico</iconset>
+     <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
     <string>Vitaminli Jenerasyon</string>
@@ -418,7 +416,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   <action name="bar_proje13">
    <property name="icon">
     <iconset resource="TUBITAK4006SAL.qrc">
-     <normaloff>:/ICONS/resimler/tubitak.ico</normaloff>:/ICONS/resimler/tubitak.ico</iconset>
+     <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
     <string>Kompost</string>
@@ -427,7 +425,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   <action name="bar_proje6">
    <property name="icon">
     <iconset resource="TUBITAK4006SAL.qrc">
-     <normaloff>:/ICONS/resimler/tubitak.ico</normaloff>:/ICONS/resimler/tubitak.ico</iconset>
+     <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
     <string>İleri Düşün Geri Dönüştür</string>
@@ -436,7 +434,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   <action name="bar_proje11">
    <property name="icon">
     <iconset resource="TUBITAK4006SAL.qrc">
-     <normaloff>:/ICONS/resimler/tubitak.ico</normaloff>:/ICONS/resimler/tubitak.ico</iconset>
+     <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
     <string>Suçlularla Empati</string>
@@ -445,7 +443,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   <action name="bar_proje12">
    <property name="icon">
     <iconset resource="TUBITAK4006SAL.qrc">
-     <normaloff>:/ICONS/resimler/tubitak.ico</normaloff>:/ICONS/resimler/tubitak.ico</iconset>
+     <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
     <string>İstanbul'da Yaşamış Edebiyatçılar</string>
@@ -454,7 +452,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   <action name="bar_proje15">
    <property name="icon">
     <iconset resource="TUBITAK4006SAL.qrc">
-     <normaloff>:/ICONS/resimler/tubitak.ico</normaloff>:/ICONS/resimler/tubitak.ico</iconset>
+     <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
     <string>Bireylere Dayatılan Toplumsal Cinsiyet Kalıbı</string>
@@ -463,7 +461,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   <action name="bar_proje14">
    <property name="icon">
     <iconset resource="TUBITAK4006SAL.qrc">
-     <normaloff>:/ICONS/resimler/tubitak.ico</normaloff>:/ICONS/resimler/tubitak.ico</iconset>
+     <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
     <string>Küresel Isınma ve İklim Değişiklilikleri</string>
@@ -472,7 +470,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   <action name="bar_proje16">
    <property name="icon">
     <iconset resource="TUBITAK4006SAL.qrc">
-     <normaloff>:/ICONS/resimler/tubitak.ico</normaloff>:/ICONS/resimler/tubitak.ico</iconset>
+     <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
     <string>Kasislere Son</string>
@@ -481,7 +479,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   <action name="bar_proje17">
    <property name="icon">
     <iconset resource="TUBITAK4006SAL.qrc">
-     <normaloff>:/ICONS/resimler/tubitak.ico</normaloff>:/ICONS/resimler/tubitak.ico</iconset>
+     <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
     <string>Apptionary</string>
@@ -490,7 +488,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   <action name="bar_proje18">
    <property name="icon">
     <iconset resource="TUBITAK4006SAL.qrc">
-     <normaloff>:/ICONS/resimler/tubitak.ico</normaloff>:/ICONS/resimler/tubitak.ico</iconset>
+     <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
     <string>Annesiz Büyüyen Şairler</string>
@@ -499,7 +497,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   <action name="bar_proje19">
    <property name="icon">
     <iconset resource="TUBITAK4006SAL.qrc">
-     <normaloff>:/ICONS/resimler/tubitak.ico</normaloff>:/ICONS/resimler/tubitak.ico</iconset>
+     <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
     <string>Aktif Karbon</string>
@@ -508,7 +506,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   <action name="bar_proje22">
    <property name="icon">
     <iconset resource="TUBITAK4006SAL.qrc">
-     <normaloff>:/ICONS/resimler/tubitak.ico</normaloff>:/ICONS/resimler/tubitak.ico</iconset>
+     <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
     <string>Gen Aktarımı</string>
@@ -517,7 +515,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   <action name="bar_proje20">
    <property name="icon">
     <iconset resource="TUBITAK4006SAL.qrc">
-     <normaloff>:/ICONS/resimler/tubitak.ico</normaloff>:/ICONS/resimler/tubitak.ico</iconset>
+     <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
     <string>Şişli Yerel Tarih Farkındalığı</string>
@@ -526,7 +524,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   <action name="bar_proje21">
    <property name="icon">
     <iconset resource="TUBITAK4006SAL.qrc">
-     <normaloff>:/ICONS/resimler/tubitak.ico</normaloff>:/ICONS/resimler/tubitak.ico</iconset>
+     <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
     <string>Olasılık Konusu Hakkında Oyun</string>
@@ -535,7 +533,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   <action name="bar_proje23">
    <property name="icon">
     <iconset resource="TUBITAK4006SAL.qrc">
-     <normaloff>:/ICONS/resimler/tubitak.ico</normaloff>:/ICONS/resimler/tubitak.ico</iconset>
+     <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
     <string>Kırmızı-Mavi</string>
@@ -544,7 +542,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   <action name="bar_proje24">
    <property name="icon">
     <iconset resource="TUBITAK4006SAL.qrc">
-     <normaloff>:/ICONS/resimler/tubitak.ico</normaloff>:/ICONS/resimler/tubitak.ico</iconset>
+     <normaloff>:/ICONS/resimler/tubitak.png</normaloff>:/ICONS/resimler/tubitak.png</iconset>
    </property>
    <property name="text">
     <string>Almanca Sıfatlarının Öğretilmesi</string>
@@ -556,7 +554,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
    </property>
    <property name="icon">
     <iconset resource="TUBITAK4006SAL.qrc">
-     <normaloff>:/ICONS/resimler/magnifying-glass.ico</normaloff>:/ICONS/resimler/magnifying-glass.ico</iconset>
+     <normaloff>:/ICONS/resimler/magnifying-glass.png</normaloff>:/ICONS/resimler/magnifying-glass.png</iconset>
    </property>
    <property name="text">
     <string>Resmi Büyüt</string>
@@ -565,7 +563,7 @@ font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
   <action name="cikis">
    <property name="icon">
     <iconset resource="TUBITAK4006SAL.qrc">
-     <normaloff>:/ICONS/resimler/power.ico</normaloff>:/ICONS/resimler/power.ico</iconset>
+     <normaloff>:/ICONS/resimler/power.png</normaloff>:/ICONS/resimler/power.png</iconset>
    </property>
    <property name="text">
     <string>Çıkış</string>
